src/k8s/storage-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storageservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /storageservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: storageservice-svc
            port: 
              number: 8080
